# openwallet

./: .copier-answers.yml  Cargo.toml  README.md  act.toml  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
e2e/: 01-create-wallet.hurl  02-list-wallets.hurl  03-get-wallet.hurl  04-get-address.hurl  05-sign-message.hurl  06-sign-transaction.hurl  07-agent-mode.hurl  info.hurl  tools.hurl
e2e/fixtures/: evm-only-policy.json
patches/signal-hook/: Cargo.toml
patches/signal-hook-registry/: Cargo.toml
patches/signal-hook-registry/src/: lib.rs
patches/signal-hook/src/: lib.rs
skill/: SKILL.md
src/: key_store.rs  lib.rs  policy.rs  vault.rs
