[package]
name = "component-openwallet"
description = "Open Wallet Standard — crypto wallet tools for AI agents"
version = "0.1.2"
edition = "2024"
keywords = ["act", "ows", "wallet", "wasm", "crypto"]

[dependencies]
act-sdk = "0.5"
wit-bindgen = { version = "0.57", features = ["async-spawn"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
ows-core = "1.2"
ows-signer = "1.2"
hex = "0.4"
sha2 = "0.11"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
getrandom = "0.4.2"
zeroize = "1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"

[lib]
crate-type = ["cdylib"]

[patch.crates-io]
signal-hook-registry = { path = "patches/signal-hook-registry" }
signal-hook = { path = "patches/signal-hook" }
